# backend/app/Http/Resources/OrderItemResource.php
@@ -1,0 +1,27 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+use Illuminate\Support\Facades\Storage;
+
+final class OrderItemResource extends JsonResource
+{
+    public function toArray($request): array
+    {
+        return [
+            'id' => $this->id,
+            'order_id' => $this->order_id,
+            'item' => new ItemResource($this->item),
+            'quantity' => $this->quantity,
+            'cost_price' => $this->cost_price,
+            'tax_rate' => $this->tax_rate,
+            'sub_total' => $this->sub_total,
+            'status' => $this->status,
+            'created_at' => $this->created_at,
+            'updated_at' => $this->updated_at,
+        ];
+    }
+}
